<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="facebook_app_id">1812295508997930</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_wait">Please wait …</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="description_title">Description</string>
    <string name="permission_access_provider_desc">Provide access to expense database</string>
    <string name="permission_access_provider_label">Expense Provider</string>
    <string name="error_empty_expense_name">Name can\'t be empty</string>
    <string name="error_empty_expense_amount">Expense amount can\'t be empty</string>
    <string name="error_empty_place_name">Place can\'t be empty</string>
    <string name="error_duplicate_member">Member with this email already present</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_member">Add Member</string>
    <string name="action_sort">Sort By</string>
    <string name="home_title">Home</string>
    <string name="expense_tile">Expense</string>
    <string name="member_title">Member</string>
    <string name="add_group_title">Add ExpenseBook</string>
    <string name="add_Expense_tile">Add Expense</string>
    <string name="add_member_title">Add Member</string>
    <string name="group_detail_title">ExpenseBook Detail</string>
    <string name="expense_detail_tile">Expense Detail</string>
    <string name="member_detail_title">Member Detail</string>
    <string name="summary">Summary</string>
    <string name="distribution">Distribution</string>
    <string name="expense_book">ExpenseBook</string>
    <string name="spend_summary">Spend Summary</string>
    <string name="expense_category_title">Category</string>
    <string name="expense_subcategory_title">SubCategory</string>
    <string name="no_image">No Image</string>
    <string name="add_member">Add Member</string>
    <string name="add_expense_book">Add Expense Book</string>
    <string name="expense_book_name">Expense Book Name</string>
    <string name="error_empty_expense_book_name">Expense name cannot be blank. Please enter a name
    </string>
    <string name="error_expense_book_name_short_length">Expense book Name length cannot be less than
        4
    </string>
    <string name="error_expense_book_already_exists">Expense name already exists. Please
        enter another name
    </string>
    <string name="expense_book_create_successful">Expense book Successfully Created</string>
    <string name="expense_name_title">Expense Name</string>
    <string name="expense_amount_title">Amount</string>
    <string name="expense_place_title">Place</string>
    <string name="logout">Logout</string>
    <string name="user_preference">USER SETTINGS</string>
    <string name="member_list">Members List</string>
    <string name="empty_text_no_member">No member</string>
    <string name="member_name">Member name</string>
    <string name="email_address_text">Email address</string>
    <string name="deleted_key">
        <xliff:g example="4" id="key">%1$s</xliff:g>
        deleted
    </string>
    <string name="expense_date">Date</string>
    <string name="expense_time">Time</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_title">ADD ACCOUNT</string>
    <string name="expense_book_members_hint">Start typing members name</string>
    <string name="help">HELP</string>
    <string name="feedback">FEEDBACK</string>
    <string name="shared">Shared</string>
    <string name="personal">Personal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_fragment_title">Expenses</string>
    <string name="task_fragment_title">Tasks</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.
    </string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="about">About</string>
    <string name="title_activity_expense_book_detail">ExpenseBookDetailActivity</string>
    <string name="more">More</string>
    <string name="no_expense">No Expense</string>
    <string name="account">Account</string>
    <string name="cash_management">Cash Management</string>
    <string name="title_activity_account">Accounts</string>
    <string name="hint_account_name">Account Name</string>
    <string name="hint_account_balance">Account Balance</string>
    <string name="hint_account_number">Account Number</string>
    <string name="submit">Submit</string>
    <string name="account_name_empty_error">Account name cannot be empty</string>
    <string name="account_number_empty_error">Account number cannot be empty</string>
    <string name="account_balance_empty_error">Account balance is empty</string>
    <string name="bank_empty_error">No bank is selected</string>
    <string name="signing_string">Already a user ? Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="bank_name"><![CDATA[Bank & Name]]></string>
    <string name="title_activity_expense_book">Expense Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new_expense">Add New</string>
    <string name="title_activity_create_new_expense_book">Create New</string>
    <string name="expense_group_creation_message">Please provide new expense name,optional expense
        icon and expense description
    </string>
    <string name="action_next">Next</string>
    <string name="ok">OK</string>
    <string name="phone_no_address_text">Mobile No.</string>
    <string name="sign_in">SiginIn</string>
    <string name="title_activity_cash">CashActivity</string>
    <string name="delete_expense_book_dialog_title">Delete Expense Book ?</string>
    <string name="delete_expense_book_dialog_message">Deleting Expense book will also delete your
        expense . However your personal expense can be tracked from private expense book
    </string>
    <string name="title_activity_category">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="expense_description">Expense Description</string>
    <string name="create_category_message">Please provide new category name,optional category icon.</string>
    <string name="category_name_empty">Category name cannot be empty.</string>
    <string name="category_name_exists">Category name already exists.</string>
    <string name="add_category">Add Category</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="action_update">Update</string>
    <string name="created_by">Created By : %1$s</string>
    <string name="created_on">Created On : %1$s</string>
    <string name="total_account_balance">Rs.12345678</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="login_failed">Unable to login</string>
    <string name="no_account_present">No account present</string>
    <string name="error_message_emptydata">No Data</string>
    <string name="expense_item_member_detail_string">%1$s in %2$s</string>
    <string name="error_message_no_camera">Device do not have camera</string>
    <string name="empty_expense_book">No expense book found</string>
    <string name="select_expense_book">Select Expense book</string>
    <string name="camera">Camera</string>
    <string name="documents">Documents</string>
    <string name="comments">Comments</string>
    <string-array name="bill_bottom_sheet_menu">
        <item>Camera</item>
        <item>Document</item>
    </string-array>
</resources>