<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home_title"/>
        <item
            android:id="@+id/nav_account"
            android:title="@string/account"
            android:icon="@drawable/ic_account_balance_black_24dp"/>

        <item android:id="@+id/nav_cash_managment"
            android:title="@string/cash_management"
            android:icon="@drawable/ic_action_cash"/>
        <item
            android:id="@+id/nav_distribution"
            android:icon="@drawable/ic_distribution_black_24dp"
            android:title="@string/distribution"/>
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_view_summary_black_24dp"
            android:title="@string/spend_summary"/>
        <item
            android:id="@+id/nav_expense_book"
            android:icon="@drawable/ic_action_expense_book"
            android:title="@string/expense_book"/>

    </group>

    <item android:title="@string/more">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_app_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/action_settings"/>
                <item
                    android:id="@+id/nav_about_app"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>

</menu>
