<!--
  ~ Copyright (c) 2016. . The Km2Labs Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.enfle.spendview.settings.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general"
        android:icon="@drawable/ic_info_24dp"/>

    <header
        android:fragment="com.enfle.spendview.settings.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <header
        android:fragment="com.enfle.spendview.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync"
        android:icon="@drawable/ic_sync_black_24dp"/>

</preference-headers>
