<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">


    <EditText
        android:id="@+id/full_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/full_name"
        android:imeOptions="actionNext"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/email_address_text"
        android:imeOptions="actionGo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/submit"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="OR"/>
</LinearLayout>


